deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spotifind
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotifind-deployment
  namespace: spotifind
  labels:
    app: spotifind-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spotifind-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: spotifind-app
    spec:
      containers:
      - name: spotifind-app
        image: gcr.io/spotifind-api/spotifind:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 160Mi
            cpu: 75m
          requests:
            memory: 128Mi
            cpu: 50m
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 150
          periodSeconds: 30
      - name: mittens
        image: expediagroup/mittens:latest
        resources:
          limits:
            memory: 32Mi
            cpu: 5m
          requests:
            memory: 32Mi
            cpu: 5m
        args:
        - "--concurrency=1"
        - "--max-readiness-wait-seconds=300"
        - "--max-warmup-seconds=30"
        - "--fail-readiness=true"
        - "--file-probe-enabled=false"
        - "--target-readiness-http-path=/health"
        - "--target-readiness-http-host=http://localhost"
        - "--target-readiness-port=5000"
        - "--target-http-host=http://localhost"
        - "--target-http-port=5000"
        - "--http-requests=get:/v1/reco/7cNNUbN90ArXvrfVUcdIO9?size=10"
---
apiVersion: v1
kind: Service
metadata:
  name: spotifind-service
  namespace: spotifind
spec:
  selector:
    app: spotifind-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-load-balancer
  namespace: spotifind
  annotations:
    networking.gke.io/managed-certificates: spotifind-external-load-balancer-managed-cert
    kubernetes.io/ingress.global-static-ip-name: spotifind-external-load-balancer-address
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotifind-service
            port:
              number: 8080
